test: add tests for StoryList and StoryView widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,14 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   integration_test:
     sdk: flutter
+  mocktail: ^1.0.4
+  mocktail_image_network: ^1.2.0
 
 flutter:
   uses-material-design: true
-  
-  # assets:
-  #   - assets/images/
+
+  assets:
+    - assets/images/
 
   fonts:
     - family: Instagram-Font
